--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,3 +29,5 @@ Suggests:
     tidyr,
     usethis
 Config/testthat/edition: 3
+URL: https://github.com/PsyTeachR/psyteachr
+BugReports: https://github.com/PsyTeachR/psyteachr/issues
